# GameEngin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Source/App/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Engin/: CMakeLists.txt  GameEngin.cpp  GameEngin.h  Logger.cpp  Logger.h
cmake/: Dependencies.cmake  ModuleUtils.cmake
scripts/: gen_version.py
